Version 3.2.10 - 2015-11-09
* Bug fixes (see mercurial logs for details)

Version 3.2.9 - 2015-09-07
* Bug fixes (see mercurial logs for details)

Version 3.2.8 - 2015-07-13
* Bug fixes (see mercurial logs for details)

Version 3.2.7 - 2015-05-19
* Bug fixes (see mercurial logs for details)

Version 3.2.6 - 2015-03-30
* Bug fixes (see mercurial logs for details)

Version 3.2.5 - 2015-02-16
* Bug fixes (see mercurial logs for details)

Version 3.2.4 - 2014-11-06
* Bug fixes (see mercurial logs for details)

Version 3.2.3 - 2014-09-29
* Bug fixes (see mercurial logs for details)
* Use literal_eval instead of safe_eval (CVE-2014-6633)
* Prevent double underscore in safe_eval (CVE-2014-6633)

Version 3.2.2 - 2014-08-03
* Bug fixes (see mercurial logs for details)

Version 3.2.1 - 2014-07-01
* Bug fixes (see mercurial logs for details)

Version 3.2.0 - 2014-04-21
* Bug fixes (see mercurial logs for details)
* Add restore_history to ModelSQL
* Add history revisions
* Add the multi selection widget
* Add index to one2many's on_change
* Remove auto-refresh on Action Window
* Add support of domain for non-relation field
* Manage microseconds in JSON-RPC and XML-RPC
* Remove Sha field
* Add password widget
* Add Len to PYSON
* Use bcrypt to hash password if possible
* Use a sequence of ids, values to set fields
* Client side actions on button and wizard
* Add depends attribute to data tag
* Add tree_invisible attribute to button in tree view
* Drop support of Python 2.6
* Deprecate on_change, on_change_with, selection_change_with and autocomplete
  field arguments
* Add fields.depends decorator
* Add run-tests
* Validate only modified and dependant fields on model write
* Improve error messages by showing the failing value
* Remove relation field actions:
    - delete_all
    - unlink_all
    - set
* Rename relation field action unlink into remove
* Use a sequence of records, values in write
* set_context of Transaction.set_user is restricted to root